--- a/ospackage/svc/cryptctl2-auto-unlock@.service
+++ b/ospackage/svc/cryptctl2-auto-unlock@.service
@@ -5,7 +5,7 @@ Wants=network-online.target
 
 [Service]
 Type=simple
-ExecStart=/usr/sbin/cryptctl2 auto-unlock %i
+ExecStart=/usr/sbin/cryptctl2 --action auto-unlock --diskID %i
 User=root
 Group=root
 WorkingDirectory=/
