--- a/ospackage/svc/cryptctl2-server.service
+++ b/ospackage/svc/cryptctl2-server.service
@@ -5,7 +5,7 @@ Wants=network-online.target
 
 [Service]
 Type=simple
-ExecStart=/usr/sbin/cryptctl2 daemon
+ExecStart=/usr/sbin/cryptctl2 --action daemon
 User=root
 Group=root
 WorkingDirectory=/
